# paper-reader

./: .gitignore  agent.md  parse_with_llamaparse.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/docling/: SKILL.md
.claude/skills/landingai/: SKILL.md
.claude/skills/paper-analysis/: skill.md
others/: 204c24c5-7411-4631-8ea6-305649dd156a.md  204c24c5-conversation.md  2511.14214v1.md  2511.19757v1.md  2512.03413v1.md  2512.05765v1.json  2512.16922v1.md  73f5769f-333c-4ba3-b751-533aeb157422.md  96e34750-4a80-462f-953e-628a10a816c6.md  de640784-9f94-420e-ab02-c7b8809d09e2.md  e0c663d0-cee2-44c3-a902-754aa3186279.md  f47afba4-2787-453b-b3bb-d804f68dbd32.md
scripts/: SKILL_LLAMAPARSE.md  extract_pdfs.py  paper-reading.md  parse_pdfs.py
self-evolving-agents/: 24eb981f-8040-4f3c-97fe-0e982226d25f.json  24eb981f-8040-4f3c-97fe-0e982226d25f.md  2508.16153v2.md  2510.01051v1.md  2511.20857v1.md  2511.21689v1.md  2512.04123v1.json  2512.04123v1.md  2512.04868v1.json  2512.04868v1.md  2512.05765v1.md  2512.16301v1.json  2512.16301v1.md  32960e66-927a-416e-85c8-12f089812d0c.md  76083b1b-07d6-4099-9b17-e4da08599706.md  77246551-482e-4312-99b4-786192a59e5e.md  s10462-025-11422-4.md
