[project]
name = "paper-reader"
version = "0.1.0"
description = "Simple PDF to Markdown converter for research papers"
requires-python = ">=3.9"
dependencies = [
    "pypdf>=4.0.0",
    "landingai-ade",
    "llama-parse",
    "llama-index"
]

[project.scripts]
paper-reader = "extract_pdfs_simple:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
